[gd_scene load_steps=18 format=2]

[ext_resource path="res://Enemies/Bat.png" type="Texture" id=1]
[ext_resource path="res://Hitboxes/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/Bat.gd" type="Script" id=3]
[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=4]
[ext_resource path="res://Hitboxes/Hitbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Music and Sounds/EnemyDie.wav" type="AudioStream" id=6]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=7]
[ext_resource path="res://Music and Sounds/Hit.wav" type="AudioStream" id=8]

[sub_resource type="CapsuleShape2D" id=5]
radius = 3.0
height = 4.0

[sub_resource type="CapsuleShape2D" id=12]
radius = 4.0
height = 0.0

[sub_resource type="CapsuleShape2D" id=4]
radius = 5.0
height = 0.0

[sub_resource type="Animation" id=6]
resource_name = "Dying"

[sub_resource type="Animation" id=2]
resource_name = "Flying"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hurtbox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 1, -17 ), Vector2( 1, -15 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hurtbox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, -4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "Flying"

[sub_resource type="AnimationNodeStateMachine" id=10]
states/Flying/node = SubResource( 8 )
states/Flying/position = Vector2( 450, 88 )
start_node = "Flying"

[sub_resource type="AnimationNodeStateMachinePlayback" id=11]

[node name="Bat" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 3 )

[node name="Stats" parent="." instance=ExtResource( 7 )]

[node name="IdleTimer" type="Timer" parent="."]
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 5 )

[node name="ShadowSprite" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
offset = Vector2( 0, -12 )
hframes = 5

[node name="Hitbox" parent="." instance=ExtResource( 5 )]
collision_layer = 16
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 1, -15 )
shape = SubResource( 12 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
position = Vector2( 1, -4 )
collision_layer = 8
collision_mask = 32
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Flying"
anims/Dying = SubResource( 6 )
anims/Flying = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 10 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 11 )

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Line2D" type="Line2D" parent="."]
visible = false
width = 2.0

[connection signal="health_depleted" from="Stats" to="." method="_on_Stats_health_depleted"]
[connection signal="hit" from="Hurtbox" to="." method="_on_Hurtbox_hit"]

[editable path="Hitbox"]
[editable path="Hurtbox"]
